{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 207,
  "lineage": "30e81269-6b0d-0058-d4ed-aa5bff09ec10",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "apache",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f34c5ae932e6f0e4",
            "arn": "arn:aws:ec2:us-east-1:432129430703:instance/i-061ce0c4fccb0509e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-061ce0c4fccb0509e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "beto_prueba",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b4dbab5f87b1f419",
            "private_dns": "ip-10-10-0-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.5",
            "public_ip": "52.87.2.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01f389a048d184ff6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-031d949603959b172",
            "tags": {
              "Name": "apache-cerberus-dev-us-east-1"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC Version": "1.5.4",
              "Name": "apache-cerberus-dev-us-east-1",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Alberto",
              "project": "cerberus",
              "region": "us-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-061baf7c3c2245d05"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432129430703:internet-gateway/igw-07da2395d4d64805a",
            "id": "igw-07da2395d4d64805a",
            "owner_id": "432129430703",
            "tags": {
              "Name": "igw-vpc-Virginia-cerberus-dev-us-east-1"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC Version": "1.5.4",
              "Name": "igw-vpc-Virginia-cerberus-dev-us-east-1",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Alberto",
              "project": "cerberus",
              "region": "us-east-1"
            },
            "vpc_id": "vpc-096b664602d1c541f"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432129430703:route-table/rtb-087a1ce6fbb1b68ee",
            "id": "rtb-087a1ce6fbb1b68ee",
            "owner_id": "432129430703",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07da2395d4d64805a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-crt-cerberus-dev-us-east-1"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC Version": "1.5.4",
              "Name": "public-crt-cerberus-dev-us-east-1",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Alberto",
              "project": "cerberus",
              "region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-096b664602d1c541f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02af4960a2a71e037",
            "route_table_id": "rtb-087a1ce6fbb1b68ee",
            "subnet_id": "subnet-031d949603959b172"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432129430703:security-group/sg-061baf7c3c2245d05",
            "description": "Allow SSH inbound traffic and ALL egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061baf7c3c2245d05",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Public instance SG",
            "name_prefix": "",
            "owner_id": "432129430703",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-tls-cerberus-dev-us-east-1"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC Version": "1.5.4",
              "Name": "allow-tls-cerberus-dev-us-east-1",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Alberto",
              "project": "cerberus",
              "region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-096b664602d1c541f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432129430703:subnet/subnet-0c0ffcd5c6dd1e571",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0ffcd5c6dd1e571",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432129430703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-cerberus-dev-us-east-1"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC Version": "1.5.4",
              "Name": "private_subnet-cerberus-dev-us-east-1",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Alberto",
              "project": "cerberus",
              "region": "us-east-1"
            },
            "vpc_id": "vpc-096b664602d1c541f"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432129430703:subnet/subnet-031d949603959b172",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031d949603959b172",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "432129430703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-cerberus-dev-us-east-1"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC Version": "1.5.4",
              "Name": "public_subnet-cerberus-dev-us-east-1",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Alberto",
              "project": "cerberus",
              "region": "us-east-1"
            },
            "vpc_id": "vpc-096b664602d1c541f"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432129430703:vpc/vpc-096b664602d1c541f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-080491df3651a4105",
            "default_route_table_id": "rtb-0ad517f421614a76e",
            "default_security_group_id": "sg-04bb2430da8f45d8f",
            "dhcp_options_id": "dopt-0e62bea4af9c0609c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-096b664602d1c541f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ad517f421614a76e",
            "owner_id": "432129430703",
            "tags": {
              "Name": "VPC_Virginia-cerberus-dev-us-east-1"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC Version": "1.5.4",
              "Name": "VPC_Virginia-cerberus-dev-us-east-1",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Alberto",
              "project": "cerberus",
              "region": "us-east-1"
            }
          }
        }
      ]
    }
  ]
}